# drawing_robot_ws

./: README.md
arduino/arduino_bridge/: README.md  arduino_bridge.ino  can.cpp  can.h  commands.h  driver.cpp  driver.h
src/arduino/arduino_bridge/: README.md  arduino_bridge.ino  can.cpp  can.h  commands.h  driver.cpp  driver.h  environment_variables.h
src/base_package/: CMakeLists.txt  OLDCMakeListsOLD.txt  base_package.xml  package.xml
src/base_package/bringup/config/: controller.yaml  ik_controller.yaml  view_bot.rviz
src/base_package/bringup/launch/: controller_manager.launch.py  gazebo_sim.launch.py  master.launch.py  rsp.launch.py
src/base_package/config/: view_bot.rviz
src/base_package/controller/: drake_calculations.cpp  ik_controller.cpp  ik_controller_parameters.yaml
src/base_package/controller/include/: drake_calculations.hpp  ik_controller.hpp
src/base_package/controller/src/: drake_calculations.cpp  ik_controller.cpp  ik_controller_config.yaml
src/base_package/hardware/: arduino_interface.cpp  can_comms.cpp  rrbot.cpp
src/base_package/hardware/include/: arduino_interface.hpp  can_comms.hpp  rrbot.hpp
src/base_package/launch/: rsp.launch.py
src/base_package/models/: base_robot.xacro  inertial_macros.xacro  robot.urdf.xacro
src/base_package/models/helper/: actuator.ros2_control.xacro  base_robot.xacro  inertial_macros.xacro  robot.ros2_control.xacro  visual_macros.xacro
src/base_package/models/helper/ros2_control_hardware_interfaces/: mock.ros2_control.xacro  real.ros2_control.xacro  sim.ros2_control.xacro
src/base_package/src/: base_node.cpp
src/base_package/worlds/: empty.world
src/odrive_ros2_control/src/: odrive_hardware_interface.cpp
